change header structure

--- a/style.css
+++ b/style.css
@@ -42,45 +42,37 @@
 
   header{
     background-color: var(--dark-blue);
-    display: flex;
   }
 
-  
+
   /* Navbar */
   .navbar{
     height: 80px;
     flex-basis: 100%;
     display: flex;
-    align-items: center;
+    align-items: center; 
+
   }
 
-  .navbar-logo{
-    background-color: red;
-    flex-basis: 10%;
-  }
-
-  .navbar-menu{
-    height: 80px;
-    flex-basis: 90%;
-    display: flex;
-    align-items: center;
-  }
-
-  .navbar-menu-left{
-    background-color: purple;
-    flex-basis: 20%;
-  }
-
-  .navbar-menu-center{
-    background-color: green;
-    flex-basis: 50%;
-  }
-
-  .navbar-menu-right{
-    background-color: var(--bordeaux);
+  .navbar-part-left{
     flex-basis: 30%;
+    background-color: red;
+
   }
 
+  .navbar-part-center{
+    flex-basis: 40%;
+    background-color: orange;
+
+  }
+
+  .navbar-part-right{
+    flex-basis: 30%;
+    background-color: red;
+  }
+
+
+ 
 
 
 
@@ -89,5 +81,3 @@
 
 
   
-
-
