--- a/style.css
+++ b/style.css
@@ -31,12 +31,12 @@
 
   /* Utils */
   .large-container {
-    max-width: 1000px;
+    max-width: 950px;
     margin: 0 auto;
   }
 
   .small-container {
-    max-width: 850px;
+    max-width: 800px;
     margin: 0 auto;
   }
 
@@ -44,13 +44,13 @@
     background-color: var(--dark-blue);
   }
 
-
   /* Navbar */
   .navbar{
     height: 80px;
     flex-basis: 100%;
     display: flex;
-    align-items: center; 
+    align-items: center;
+    margin-bottom: 30px;
 
   }
 
@@ -69,6 +69,37 @@
   .navbar-part-right{
     flex-basis: 30%;
     background-color: red;
+  }
+
+  /* Jumbotron */
+  .jumbotron{
+    height: 400px;
+    background-color: var(--light-light-blue);
+  }
+
+  .jumbotron-title{
+    width: 90%;
+    height: 150px;
+    background-color: red;
+    margin-bottom: 20px;
+  }
+
+  .jumbotron-content{
+    width: 100%;
+    display: flex;
+    gap: 20px;
+  }
+
+  .jumbotron-content-description{
+    background-color: orange;
+    flex-basis: 40%;
+    height: 200px;
+  }
+
+  .jumbotron-content-image{
+    background-color: green;
+    flex-basis: 60%;
+    height: 280px;
   }
 
 
