added section-asset-square structure

--- a/style.css
+++ b/style.css
@@ -197,6 +197,102 @@
     width: 20%;
   }
 
+  /* Section-asset-square */
+  .section-asset-square{
+    height: 350px;
+    }
+
+  .row-square{
+    display: flex;
+    height: 350px;
+  }
+
+  .column-square-left{
+    flex-basis: calc(100% / 3);
+  }
+
+  .column-square-center{
+    flex-basis: calc(100% / 3);
+    background-color: var(--grey);
+  }
+
+  .column-square-right{
+    flex-basis: calc(100% / 3);
+  }
+
+  .card-square-over, .card-square-bottom{
+    display: flex;
+    flex-basis: 100%;
+    height: 50%;
+  }
+
+  .card-square-over > .square{
+    flex-basis: 50%;
+  }
+
+  .card-square-bottom > .square{
+    flex-basis: 50%;
+  }
+
+  #designit-green{
+    background-color: var(--green);
+  }
+
+  #arizona{ 
+    background-color: var(--bordeaux);
+  }
+
+  #florida{
+    background-color: var(--light-blue);
+  }
+
+  #topps{
+    background-color: var(--bright-red);
+  }
+
+  #world-bycicle{
+    background-color: var(--red);
+  }
+
+  #hearst{
+    background-color: var(--light-light-blue) ;
+  }
+
+  #lonely-planet{
+    background-color: var(--dark-blue);
+  }
+
+  #clear-channel{
+    background-color: var(--yellow);
+  }
+
+  .dropbox-company{
+    background-color: var(--light-light-blue);
+  }
+
+  .dropbox-company-content{
+    height: 180px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+  }
+
+  .dropbox-company-content-title{
+    align-items: center;
+    background-color: red;
+    flex-basis: 50%;
+  }
+
+  .dropbox-company-content-button{
+    background-color: brown;
+    flex-basis: 50%;
+    text-align: center;
+  }
+
+
+
+
+
   
 
 
