--- a/style.css
+++ b/style.css
@@ -27,8 +27,8 @@
   body {
     font-family: 'Open Sans', sans-serif;
     color: var(--black);
+    padding-top: 70px;
   }
-
 
   /* Utils */
   .large-container {
@@ -42,11 +42,15 @@
   }
 
   header{
-    background-color: var(--dark-blue);
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 2;
   }
 
   footer{
-    color: white;
+    color: var(--black);
     background-color: var(--black);
     height: 500px;
   }
@@ -61,35 +65,73 @@
     margin-bottom: 40px;
   }
 
+  ul{
+    list-style-type: none;
+    padding-inline-start: 0;
+    /* list-style-position: inside; */
+  }
+
+  button{
+    background-color: var(--bright-blue);
+    border: 1px solid transparent;
+    color: white;
+    padding: 3px 8px;
+    font-size: 12px;
+  }
+
   /* Navbar */
   .navbar{
-    height: 80px;
+    height: 70px;
     flex-basis: 100%;
     display: flex;
     align-items: center;
-    margin-bottom: 30px;
-
+    background-color: var(--white);
+    padding: 0 5px;
   }
 
   .navbar-part-left{
-    flex-basis: 30%;
-    background-color: red;
-
+    flex-basis: 35%;
+    display: flex;
   }
 
   .navbar-part-center{
-    flex-basis: 40%;
-    background-color: orange;
-
+    flex-basis: 30%;
   }
 
   .navbar-part-right{
-    flex-basis: 30%;
-    background-color: red;
+    flex-basis: 35%;
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  .logo{
+    display: flex;
+  }
+
+  .logo > img{
+    width: 90%;
+  }
+
+  .actions > ul{
+    display: flex;
+  }
+
+  .actions li{
+    font-size: 12px;
+    padding: 0 10px;
+   }
+
+  .actions{
+    display: flex;
+  }
+
+  .button-nav{
+    position: relative;
+    bottom: 2px;
   }
 
   /* Jumbotron */
-  .jumbotron{
+  .jumbotron-background{
     height: 400px;
     background-color: var(--light-light-blue);
   }
@@ -98,7 +140,7 @@
     width: 90%;
     height: 150px;
     background-color: red;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
   }
 
   .jumbotron-content{
