--- a/style.css
+++ b/style.css
@@ -55,6 +55,10 @@
     font-size: 14px;
   }
 
+  .p-little{
+    font-size: 13px;
+  }
+
   span, li, button, a{
     font-size: 12px;
   }
@@ -85,7 +89,7 @@
   }
 
   .section-dimension-general{
-    margin: 50px 0;
+    margin: 90px 0;
   }
 
   .section-title{
@@ -357,13 +361,11 @@
   .row-operations{
     display: flex;
     gap: 30px;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
   }
 
   .column-operations{
     flex-basis: calc(100% / 3);
-    height: 250px;
-    background-color: #0061FF;
   }
 
   /* Section-team */
@@ -372,9 +374,7 @@
   }
 
   .section-team-content{
-    background-color: purple;
-    height: 20px;
-    width: 20%;
+    width: 30%;
   }
 
   /* Section-asset-square */
