added footer contents

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
     --bright-red: #FF1C1C;
     --dark-blue: #0D2481;
     --yellow: #FFD830;
-    --dark-dark-grey: #a9a9a9;
+    --dark-dark-grey: #999999;
   }
   
   /* Reset */
@@ -83,7 +83,7 @@
   }
 
   footer{
-    color: var(--black);
+    color: var(--white);
     background-color: var(--black);
     height: 500px;
   }
@@ -461,7 +461,7 @@
     width: 90%;
   }
 
-  .border-empty{
+  .border-empty-square{
     width: 20%;
     border-top: 1px solid var(--dark-grey);
   }
@@ -500,43 +500,66 @@
 
   .usual-faq{
     height: 80px;
-    border-top: 1px solid var(--dark-grey);
     border-bottom: 1px solid var(--dark-grey);
     display: flex;
     align-items: center;
     justify-content: space-between;
   }
 
-  /* Footer */
+  .usual-faq-first{
+    border-top: 1px solid var(--dark-grey);
+  }
 
+  .fa-angle-down{
+    padding-right: 30px;
+  }
+
+  /* Footer */
   .footer-content{
-    padding: 50px 0;
+    padding: 80px 0;
   }
 
   .footer-top{
     flex-basis: 100%;
-    background-color: red;
     display: flex;
     gap: 10px;
   }
 
   .footer-bottom{
     width: 15%;
-    background-color: yellow;
     display: flex;
     align-items: center;
-    border-top: 1px solid var(--white);
+  }
+
+  .footer-bottom-content{
+    display: flex;
+    align-items: center;
+    color: var(--dark-dark-grey);
   }
 
   .footer-top > ul{
-    background-color: blue;
     flex-basis: 20%;
-    height: 250px;
-    margin-bottom: 70px;
+  }
+
+  .footer-top li{
+    padding-bottom: 7px;
+    font-size: 12px;
+  }
+
+  .footer-top li:first-child{
+    font-size: 13px;
+    font-weight: bold;
+    padding-bottom: 10px;
+  }
+
+  .border-empty-footer{
+    border-top: 1px solid var(--white);
+    width: 10%;
   }
 
   .language{
-    padding-left: 5px;
+    padding-left: 7px;
+    padding-right: 2px;
   }
 
 
